# assistant

./: .env.production.example  .gitignore  CLAUDE.md  cloud-init.yml  deploy.sh  docker-compose.yml  mcp-servers.cloud.example.json  provision-azure.sh
mcp-servers/db-mcp-server/: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  __init__.py  config.py  container.py  database.py  dump_json.py  dump_sql.py  migrate_chroma_to_pgvector.py  models.py  pyproject.toml  pytest.ini  repositories.py  requirements.txt  run_tests.py  schema.sql  server.py  setup.py
mcp-servers/db-mcp-server/.github/: copilot-instructions.md
mcp-servers/db-mcp-server/backup/: .gitignore  README.md  __init__.py  backup_json.py  backup_sql.py
mcp-servers/db-mcp-server/handlers/: __init__.py  core_handlers.py  entertainment_handlers.py  entity_handlers.py  entity_resolution_handlers.py  event_handlers.py  health_handlers.py  instruction_handlers.py  journal_handlers.py  meal_handlers.py  people_handlers.py  planning_handlers.py  query_handlers.py  travel_handlers.py  workout_handlers.py
mcp-servers/db-mcp-server/mcp/prompts/: CAPABILITIES.md  EXAMPLES.md  WORKFLOW.md
mcp-servers/db-mcp-server/mcp/resources/: ENTERTAINMENT.md  EVENTS.md  JOURNAL.md  LOCATIONS.md  (+4 more)
mcp-servers/db-mcp-server/migrations/: add_daily_plans.sql  add_person_id_to_health_conditions.sql  add_pgvector_embeddings.sql
mcp-servers/db-mcp-server/query/: __init__.py  builder.py  entities.py  hydrator.py  validators.py
mcp-servers/db-mcp-server/services/: memory_service.py
mcp-servers/db-mcp-server/tests/: __init__.py  conftest.py  handler_test_utils.py  test_backup_sql_dump.py  test_config.py  test_create_event_parent_id.py  test_delete_exercise.py  test_delete_workout.py  test_error_messages.py  test_fixtures.py  test_handler_routing.py  test_handlers_integration.py  test_health_handlers.py  test_interval_workouts.py  test_journal_handler_integration.py  test_journal_handlers.py  test_memory_filtering.py  test_memory_integration.py  test_memory_search_quality.py  test_memory_service.py  test_reassign_exercise_in_workouts.py  test_relationship_triggers.py  test_repository_transactions.py  test_schema_updates.py  test_server_integration.py  test_sleep_events.py  test_sql_validation.py  test_structured_query.py  test_update_commute_handler_success.py  test_update_commute_requires_commute_id.py  test_update_event_participants_parent.py  test_update_event_workout_notes.py  test_update_workout_ignores_unsupported_metrics.py
mcp-servers/db-mcp-server/tools/: README.md  __init__.py  backup_tools.py  core_tools.py  entertainment_tools.py  entity_tools.py  event_tools.py  health_tools.py  instruction_tools.py  journal_tools.py  location_tools.py  meal_tools.py  people_tools.py  planning_tools.py  query_tools.py  travel_tools.py  workout_tools.py
mcp-servers/db-mcp-server/transport/: http.py
mcp-servers/db-mcp-server/utils/: __init__.py  error_messages.py  init_db.py  show_config.py
mcp-servers/garmin-mcp-server/: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  restart-mcp-server.bat  restart-mcp-server.ps1  test_mcp_server.py
mcp-servers/garmin-mcp-server/tests/: test_garmin.py  test_mcp_debug.py
mcp-servers/google-workspace-mcp-server/: .gitignore  Dockerfile  authenticate.bat  pyproject.toml  requirements.txt  run.bat
mcp-servers/google-workspace-mcp-server/src/: __init__.py  auth.py  cache.py  server.py
(+197 files in other folders)
